--- a/public/css/argon.css
+++ b/public/css/argon.css
@@ -5668,13 +5668,15 @@ input[type='button'].btn-block
 .nav-link
 {
     display: block;
+        font-weight: 600 !important;
 
-    padding: .25rem .75rem;
+
 }
 .nav-linkf
 {
     display: block;
-    color: #fff;
+    color: #fff !important;
+    hover: #fff;
     padding: .25rem .75rem;
 }
 
@@ -18903,9 +18905,9 @@ a.btn-icon-only
 .card
 {
     margin-bottom: 30px;
-
     border: 0; 
-    box-shadow: 0 0 2rem 0 rgba(136, 152, 170, .15);
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    /*box-shadow: 0 0 2rem 0 rgba(136, 152, 170, .15);*/
 }
 
 .card-translucent
@@ -24526,7 +24528,7 @@ button.section-darker:focus
 
 .bg-gradient-secondary
 {
-    background: linear-gradient(87deg, #f7fafc 0, #e6e8ec 100%) !important;
+    background: linear-gradient(87deg, #f5f7f8 0, #f5f6f8 100%) !important;
 }
 
 .bg-gradient-success
